feat: second try + redesign

--- a/index.html
+++ b/index.html
@@ -9,6 +9,51 @@
     <title>cv_nsivaev</title>
 </head>
 <body>
+<!--<div class="l-wrap">-->
+<!--    <div class="fixed-gutter-grid">-->
+<!--        <div class="column"></div>-->
+<!--        <div class="column"></div>-->
+<!--        <div class="column"></div>-->
+<!--        <div class="column"></div>-->
+<!--        <div class="column"></div>-->
+<!--        <div class="column"></div>-->
+<!--        <div class="column"></div>-->
+<!--        <div class="column"></div>-->
+<!--        <div class="column"></div>-->
+<!--        <div class="column"></div>-->
+<!--        <div class="column"></div>-->
+<!--        <div class="column"></div>-->
+<!--    </div>-->
+<!--</div>-->
 
+<div class="l-wrap">
+    <div class="l-guest-article">
+        <div class="grid-item l-main"><div class="grid-inner">CV</div></div>
+        <div class="grid-item l-sidebar"><div class="grid-inner">
+            <nav>
+                <a href="#">ABOUT ME</a>
+                <a href="#">SKILLS</a>
+                <a href="#">PROJECTS</a>
+                <a href="#">CONTACTS</a>
+            </nav>
+        </div></div>
+    </div>
+    <div class="l-guest-article">
+        <div class="grid-item l-main"><div class="grid-inner">ABOUT ME</div></div>
+        <div class="grid-item l-sidebar"><div class="grid-inner">Боковая панель</div></div>
+    </div>
+    <div class="l-guest-article">
+        <div class="grid-item l-main"><div class="grid-inner">SKILLS</div></div>
+        <div class="grid-item l-sidebar"><div class="grid-inner">Боковая панель</div></div>
+    </div>
+    <div class="l-guest-article">
+        <div class="grid-item l-main"><div class="grid-inner">PROJECTS</div></div>
+        <div class="grid-item l-sidebar"><div class="grid-inner">Боковая панель</div></div>
+    </div>
+    <div class="l-guest-article">
+        <div class="grid-item l-main"><div class="grid-inner">CONTACTS</div></div>
+        <div class="grid-item l-sidebar"><div class="grid-inner">Боковая панель</div></div>
+    </div>
+</div>
 </body>
 </html>
