feat: ready to push 3

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h2 id="text">i’m <a href="#">nikolay sivaev</a>,</h2>
                     <h3>junior frontend developer.</h3>
                         <p>i’m 19 y.o. beginning front-end developer from moscow, russia.
-                        at the moment i am studying at moscow music military college.
+                        at&nbsp;the moment i am studying at moscow music military college.
                         english level–b2 (tested on <a href="https://www.efset.org/ru/" target="_blank">efset</a>).</p>
                 </div>
             </div>
